Visual_Code/Kubernetes/Ingress/dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default #This can be changed to your own ns.
