Visual_Code/Kubernetes/Ingress/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
