Visual_Code/Kubernetes/Ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: abc.com
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:kuber
          service:
            name: kubernetes-dashboard
            port:
              number: 80
